--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
-version: '3'
+version: '3.8'
 
 services:
-  nextjs:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - '8080:80'
+    environment:
+      NODE_ENV: production
     volumes:
-      - ./out:/usr/share/nginx/html
-    restart: always
+      - .:/app
+      - /app/node_modules
