--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.12.4",
+    "xlsx": "^0.18.5",
     "zod": "3.23.8"
   },
   "devDependencies": {
