--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
-version: '3.8'
+version: '3.5'
 
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: docker-next
     ports:
-      - '8080:80'
-    environment:
-      NODE_ENV: production
+      - '3000:8080'
     volumes:
       - .:/app
       - /app/node_modules
