--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "7.52.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.12.4",
